# 2023_20451427

./: .gitignore  ModelPartList_8cpp.html  ModelPartList_8h.html  ModelPartList_8h_source.html  ModelPart_8cpp.html  ModelPart_8h.html  ModelPart_8h_source.html  README.md  adder_8cpp.html  adder_8h.html  adder_8h_source.html  annotated.html  calc_8cpp.html  classMainWindow-members.html  classMainWindow.html  classModelPart-members.html  classModelPart.html  classModelPartList-members.html  classModelPartList.html  classNewGroupDialog-members.html  classNewGroupDialog.html  classOptionDialog-members.html  classOptionDialog.html  classes.html  files.html  functions.html  functions_func.html  git-cheat-sheet.txt  globals.html  globals_func.html  hi_and_date.cmd  hierarchy.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  newgroupdialog_8cpp.html  newgroupdialog_8h_source.html  optiondialog_8cpp.html  (+1 more)
.github/workflows/: doxygen-deploy.yml
Worksheet3/: adder.cpp  calc.cpp  hello.cpp
Worksheet3/adder_dynamic/include/: adder.h
Worksheet3/adder_dynamic/lib/: libadder.lib
Worksheet4/: CMakeLists.txt
Worksheet4/calc_cmake/: CMakeLists.txt
Worksheet5/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp
Worksheet6/Qt_intro/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet7/Qt_VTK/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  doxyfile  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgroupdialog.cpp  newgroupdialog.h  newgroupdialog.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
html/: classMainWindow.html  classModelPart-members.html  classModelPartList-members.html  files.html  functions_func.html
html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_9.js  all_b.js  all_c.js  all_d.js  functions_3.js  functions_5.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  functions_f.js
latex/: ModelPartList_8h.tex  ModelPart_8cpp.tex  ModelPart_8h.tex  annotated.tex  classMainWindow.tex  classModelPart.tex  classModelPartList.eps  classModelPartList.tex  classOptionDialog.eps  classOptionDialog.tex  files.tex  hierarchy.tex  main_8cpp.tex  mainwindow_8cpp.tex  mainwindow_8h.tex  optiondialog_8cpp.tex  refman.tex
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  (+1 more)
(+2 files in other folders)
